// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Page.MenuButton UU5.Bricks.Page.MenuButton - onClick() 1`] = `
<MenuButton
  id="uuID03"
  onClick={[Function]}
  screenSize="xs"
/>
`;

exports[`UU5.Bricks.Page.MenuButton UU5.Bricks.Page.MenuButton - onClick() 2`] = `
<MenuButton
  id="uuID03"
  onClick={[Function]}
  screenSize="xs"
/>
`;

exports[`UU5.Bricks.Page.MenuButton bgStyle="filled" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton bgStyle="outline" 1`] = `
<Button
  bgStyle="outline"
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton bgStyle="transparent" 1`] = `
<Button
  bgStyle="transparent"
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton ccrKey="<UU5.Parrot.Page ccrKey='UU5.Parrot.Page' />" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton checkGrammar=false 1`] = `
<Button
  checkGrammar={false}
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton checkGrammar=true 1`] = `
<Button
  checkGrammar={true}
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton checkHighlight=false 1`] = `
<Button
  checkHighlight={false}
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton checkHighlight=true 1`] = `
<Button
  checkHighlight={true}
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton checkSpaces=false 1`] = `
<Button
  checkSpaces={false}
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton checkSpaces=true 1`] = `
<Button
  checkSpaces={true}
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton className="my-classname" 1`] = `
<Button
  className="uu5-bricks-page-menu-button my-classname uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton className="test-classname" 1`] = `
<Button
  className="uu5-bricks-page-menu-button test-classname uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="brown" 1`] = `
<Button
  className="color-schema-brown uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="brown-rich" 1`] = `
<Button
  className="color-schema-brown-rich uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="cyan" 1`] = `
<Button
  className="color-schema-cyan uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="cyan-rich" 1`] = `
<Button
  className="color-schema-cyan-rich uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="default" 1`] = `
<Button
  className="color-schema-default uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="green" 1`] = `
<Button
  className="color-schema-green uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="green-rich" 1`] = `
<Button
  className="color-schema-green-rich uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="grey" 1`] = `
<Button
  className="color-schema-grey uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="grey-rich" 1`] = `
<Button
  className="color-schema-grey-rich uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="orange" 1`] = `
<Button
  className="color-schema-orange uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="orange-rich" 1`] = `
<Button
  className="color-schema-orange-rich uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="pink" 1`] = `
<Button
  className="color-schema-pink uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="pink-rich" 1`] = `
<Button
  className="color-schema-pink-rich uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="purple" 1`] = `
<Button
  className="color-schema-purple uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="purple-rich" 1`] = `
<Button
  className="color-schema-purple-rich uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="red" 1`] = `
<Button
  className="color-schema-red uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="red-rich" 1`] = `
<Button
  className="color-schema-red-rich uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="yellow" 1`] = `
<Button
  className="color-schema-yellow uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton colorSchema="yellow-rich" 1`] = `
<Button
  className="color-schema-yellow-rich uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton content="This is Content from ContentMixin" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content="This is Content from ContentMixin"
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton content=12345 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={12345}
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton controlled=false 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton controlled=true 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton default props 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton disabled=false 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton disabled=false 3`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton disabled=true 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton disabled=true 3`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  disabled={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton displayBlock=false 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton displayBlock=true 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  displayBlock={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton dynamic=false 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton dynamic=true 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  dynamic={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton fullTextSearchPriority=0 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu-fulltextsearch-0 uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton hidden=false 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton hidden=false 3`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton hidden=true 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton hidden=true 3`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  hidden={true}
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton id="myId" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="myId-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton id="test-id" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="test-id-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton ignoreHTML=false 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton ignoreHTML=true 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton mainAttrs=undefined 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton menu="left" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton menu="right" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-right"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton name="myName" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  name="myName-inner"
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton nestingLevel="bigBox" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBox"
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton nestingLevel="bigBoxCollection" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="bigBoxCollection"
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton nestingLevel="box" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton nestingLevel="box" 3`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="box"
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton nestingLevel="boxCollection" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="boxCollection"
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton nestingLevel="container" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="container"
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Page.MenuButton nestingLevel="inline" 3`] = `""`;

exports[`UU5.Bricks.Page.MenuButton nestingLevel="page" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="page"
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton nestingLevel="smallBox" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBox"
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton nestingLevel="smallBoxCollection" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="smallBoxCollection"
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton nestingLevel="spa" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  nestingLevel="spa"
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton noIndex=false 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton noIndex=true 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-noindex uu-fulltextsearch-0 uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton noPrint=false 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton noPrint=true 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton pageKey=null 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton pressed=false 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton pressed=true 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  pressed={true}
/>
`;

exports[`UU5.Bricks.Page.MenuButton selected=false 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton selected=true 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  selected={true}
/>
`;

exports[`UU5.Bricks.Page.MenuButton size="l" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  size="l"
/>
`;

exports[`UU5.Bricks.Page.MenuButton size="m" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
/>
`;

exports[`UU5.Bricks.Page.MenuButton size="s" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  size="s"
/>
`;

exports[`UU5.Bricks.Page.MenuButton size="xl" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  size="xl"
/>
`;

exports[`UU5.Bricks.Page.MenuButton style="padding:8px; borderRadius: 2px" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
/>
`;

exports[`UU5.Bricks.Page.MenuButton style={"backgroundColor":"red","color":"blue"} 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
/>
`;

exports[`UU5.Bricks.Page.MenuButton style={"margin":8} 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  style={
    Object {
      "margin": 8,
    }
  }
/>
`;

exports[`UU5.Bricks.Page.MenuButton textCorrector=false 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  textCorrector={false}
/>
`;

exports[`UU5.Bricks.Page.MenuButton textCorrector=true 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={Object {}}
  onClick={[Function]}
  textCorrector={true}
/>
`;

exports[`UU5.Bricks.Page.MenuButton tooltip="My Tooltip" 1`] = `
<Button
  className="uu5-bricks-page-menu-button uu5-bricks-page-menu-button-left"
  content={
    <Icon
      authenticate={false}
      className={null}
      clickable={true}
      controlled={true}
      disabled={false}
      hidden={false}
      icon="mdi-menu"
      id={null}
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      parent={null}
      pureRender={false}
      ref_={null}
      selected={false}
      src=""
      style={null}
      tooltip={null}
    />
  }
  id="uuID-inner"
  mainAttrs={
    Object {
      "title": "My Tooltip",
    }
  }
  onClick={[Function]}
  tooltip="My Tooltip"
/>
`;
